@@ -49,6 +49,8 @@ Library
 Windows
 -------
 
+- Issue #25778: winreg does not truncase string correctly (Patch by Eryk Sun)
+
 - Issue #28896: Deprecate WindowsRegistryFinder and disable it by default.
 
 Tests
